--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cloud_firestore_platform_interface: 6.1.8
   cloud_firestore_web: 3.10.7
   collection: 1.18.0
+  dropdown_button2: 2.3.9
+  easy_debounce: 2.0.1
   equatable: 2.0.5
   file_picker: 6.1.1
   firebase_auth: 4.17.7
