--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,13 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   auto_size_text: 3.0.0
+  badges: 2.0.2
   cached_network_image: 3.3.1
   cloud_firestore: 4.15.7
   cloud_firestore_platform_interface: 6.1.8
   cloud_firestore_web: 3.10.7
   collection: 1.18.0
-  easy_debounce: 2.0.1
+  dropdown_button2: 2.3.9
   equatable: 2.0.5
   file_picker: 6.1.1
   firebase_auth: 4.17.7
